# result

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  cmake.yml
all/: CMakeLists.txt
cmake/: ciBuild.cmake  exec.cmake  run_configure_and_build.cmake  setCiVars.cmake
examples/: CMakeLists.txt  main.cpp
examples/source/: main.cpp
include/result/: coresult.h  coresult_with_using.h  result.h  result_with_using.h
src/: CMakeLists.txt  coresult.cpp  coresult.h  coresult_with_using.cpp  coresult_with_using.h  result.cpp  result.h  result_with_using.cpp  result_with_using.h
test/: CMakeLists.txt
test/source/: coresult.cpp  result.cpp
test/subproject_test/: CMakeLists.txt
test/subproject_test/cxxabi/: CMakeLists.txt
ut/: CMakeLists.txt  coresult.t.cpp  result.t.cpp
